--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
   <div class="container">
     <div class="search-panel">
       <div class="search-panel__filters">
+        <h3>Filter by Genre</h3>
+        <div id="genre-filter"></div>
+    
+        <h3>Filter by Language</h3>
+        <div id="language-filter"></div>
+    
+        <h3>Filter by Rating</h3>
+        <div id="rating-filter"></div>
       </div>
 
       <div class="search-panel__results">
