--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 
       <div class="search-panel__results">
         <div id="searchbox"></div>
+        <div id="sort-by"></div>
         <div id="hits"></div>
         <div id="pagination"></div>
       </div>
