--- a/index.html
+++ b/index.html
@@ -57,10 +57,15 @@
   <script src="https://cdn.jsdelivr.net/npm/algoliasearch@4.10.5/dist/algoliasearch-lite.umd.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/instantsearch.js@4.78.3"></script>
   <script src="./src/app.js"></script>
+  
+  <!-- Vercel Analytics -->
   <script>
     window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
   </script>
-  <script defer src="/_vercel/insights/script.js"></script>
+  <script defer src="https://va.vercel-scripts.com/v1/script.debug.js"></script>
+  
+  <!-- Vercel Speed Insights -->
+  <script defer src="https://vitals.vercel-insights.com/v1/vitals.debug.js"></script>
 </body>
 
 </html>
