--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/instantsearch.css@8/themes/satellite-min.css">
   <link rel="stylesheet" href="./src/index.css">
   <link rel="stylesheet" href="./src/app.css">
+  <script>
+    window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+  </script>
+  <script defer src="/_vercel/insights/script.js"></script>
 
   <title>instantsearch-app</title>
 </head>
@@ -56,16 +60,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/algoliasearch@4.10.5/dist/algoliasearch-lite.umd.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/instantsearch.js@4.78.3"></script>
-  <script src="./src/app.js"></script>
-  
-  <!-- Vercel Analytics -->
-  <script>
-    window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
-  </script>
-  <script defer src="https://va.vercel-scripts.com/v1/script.debug.js"></script>
-  
-  <!-- Vercel Speed Insights -->
-  <script defer src="https://vitals.vercel-insights.com/v1/vitals.debug.js"></script>
+  <script src="./src/app.js"></script>  
 </body>
 
 </html>
